a1/brendan_gordon/TEST_PROGRAMS/invalidtype/david_rapoport/invalidtype2.min
# Must use an int for a condition

var x : float;
var y : string;

if x then
read x;
endif

while y do
print y;
done
